--- a/Stats_thinking.ipynb
+++ b/Stats_thinking.ipynb
@@ -720,7 +720,7 @@
     "- A correlation of 0.623 indicates a positive relationship between years worked and salary being earned.\n",
     "    This means that they move together. \n",
     "    \n",
-    "- The large p-value of 1.274779518969558e-56 indicates that there is weak evidence to conclude that an increase in salary earned is due to an increase in years worked"
+    "- The small p-value of 1.274779518969558e-56 indicates that there is strong evidence to conclude that an increase in salary earned is due to an increase in years worked"
    ]
   },
   {
