--- a/Stats_thinking.ipynb
+++ b/Stats_thinking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4         1     1      4         1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dropping missing value\n",
     "sal_data = sal_data.dropna(axis = 0, how ='any')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We dropping the null value because it won't affect our data that much as it is not an outlier and it accounts less than 20% of the data"
    ]
   },
   {
